# Graph-based-recomendation-system

./: .gitignore  README.md  data.ipynb  pyproject.toml
config/: settings.py  urls.py
data/: country_tracks.csv  genre.csv  listening.csv  listeninig.csv  track_data.csv  tracks.csv  users.csv
graph_recsys/: apps.py  forms.py  models.py  nodeutils.py  serializers.py  services.py  urls.py  views.py
graph_recsys/management/commands/: fill.py  fill_nodes.py
graph_recsys/migrations/: 0001_initial.py  0002_rename_genre_name_genre_name_alter_track_listeners.py  0003_genre_fans_alter_track_listeners.py  0004_alter_genre_fans.py  0005_remove_genre_fans_prefer.py  0006_alter_prefer_genre_alter_prefer_user.py  0007_remove_prefer_genre_prefer_genres.py
graph_recsys/templates/: base.html
graph_recsys/templates/graph_recsys/: main.html  prefer_form.html  statistics.html
graph_recsys/templatetags/: my_tags.py
tests/: test_models.py  test_user_models.py
users/: forms.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_first_name.py  0003_remove_user_token.py
users/templates/: base.html
users/templates/users/: login.html
